# g1_controller

./: CMakeLists.txt  README.md  Readme.md  launch_g1_mujoco.sh  main.cpp  run_sim.sh
cmd/: convert_footcommand_2_global.py  gen_cmd.py  gen_footstep_scene.py
config/: config.yaml  footcommands.csv  footcommands_global.csv
config/policy/footstep/v0/exported/: policy.onnx  policy_2d.onnx  policy_3d.onnx
config/policy/footstep/v0/params/: deploy.yaml
config/policy/velocity/v0/params/: deploy.yaml
config/urdf/: g1_29dof.urdf
g1_controller/: CMakeLists.txt
g1_controller/include/g1_controller/: g1_controller.h
g1_controller/src/: g1_controller.cpp  state_estimator.cpp
g1_gui/: CMakeLists.txt  launch_g1_gui.sh
g1_gui/include/g1_gui/: joint_names.hpp
g1_gui/src/: main.cpp
g1_gui/web/: index.html
include/: State_Footstep.h  param.h
include/g1_controller/: g1_controller.h
include/isaaclab/envs/mdp/actions/: joint_actions.h
include/isaaclab/envs/mdp/commands/: foot_command_source.h  footstep_command.h  preview_controller.h  vrp_generator.h
include/isaaclab/envs/mdp/observations/: observations.h
include/isaaclab/manager/: manager_term_cfg.h  observation_manager.h
include/isaaclab/utils/: kinematics.h  math_utils.h
src/: State_Footstep.cpp  g1_controller.cpp  main.cpp
